--- a/tema2.html
+++ b/tema2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Página Web Enrique Barbudo</title>
+<title>Lenguaje de Marcas. Tema 2</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" href="css/simple-line-icons.css"/>
@@ -21,12 +21,13 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="https://es.wikipedia.org/wiki/Lenguaje_de_marcado" target="_blank">Lenguaje de Marcas</a> </div>
+        <a class="navbar-brand" href="#">Tema 2</a> </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#work">Lenguaje de Marcas</a></li>
-          <li><a href="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\cordobapatrimonio\cordobapatrimonio.html" target="_blank">Córdoba Patrimonio</a></li>
-          <li><a href="#">Recetas de la Abuela</a></li>
+          <li class="active"><a href="https://moodle.iesgrancapitan.org/mod/forum/discuss.php?d=316" target="_blank">Ejercicio 1</a></li>
+          <li><a href="https://moodle.iesgrancapitan.org/mod/forum/discuss.php?d=315" target="_blank">Ejercicio 2</a></li>
+          <li><a href="ejercicios/tema2/probandohttp.pdf" target="_blank">Ejercicio 3</a></li>
+          <li><a href="ejercicios/tema2/cuestionario LM.pdf" target="_blank">Ejercicio 4</a></li>
         </ul>
       </div>
     </div>
@@ -38,47 +39,17 @@
       <div class="row">
         <div class="col-md-12">
           <div class="banner-text">
-            <h2>Enrique <span>Barbudo</span> Ordóñez</h2>
-            <p>Futuro Desarrollador. Técnico Superior en Alojamientos</p>
-            <a href="ejercicios/tema1/PDFLAtexEnriqueBarbudo.pdf" target="_blank" class="banner-button">Sobre mí</a> </div>
+            <!--<h2>Enrique <span>Barbudo</span> Ordóñez</h2>
+            <p>Futuro Desarrollador. Técnico Superior en Alojamientos</p>-->
+            <a href="index.html" class="banner-button">Inicio</a> </div>
+            <a href="tema3.html" class="banner-button">Tema Siguiente</a> </div>
+            <a href="tema1.html" class="banner-button">Tema Anterior</a> </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="features">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-sm-6 col-xs-12">
-        <div class="feature-box media">
-          <div class="icon-box text-center pull-left media-object"> <i class="icon-bulb"></i> </div>
-          <div class="feature-text media-body">
-            <h4>Lenguaje de Marcas</h4>
-            <p class="feature-detail">Apartado con las actividades realizadas durante el curso</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-6 col-xs-12">
-        <div class="feature-box media pull-left">
-          <div class="icon-box text-center pull-left media-object"> <i class="icon-eye"></i> </div>
-          <div class="feature-text media-body">
-            <h4>Córdoba Patrimonio</h4>
-            <p class="feature-detail">Página Web realizada para el módulo de lenguaje de marcas sobre la ciudad de Córdoba</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-6 col-xs-12">
-        <div class="feature-box media pull-left">
-          <div class="icon-box text-center pull-left media-object"> <i class="icon-heart"></i> </div>
-          <div class="feature-text media-body">
-            <h4>Recetas de la Abuela</h4>
-            <p class="feature-detail">Página Web realizada para el módulo de lenguaje de marcas sobre recetario de comida.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 <div id="work" class="portfolio">
