--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#work">Lenguaje de Marcas</a></li>
-          <li><a href="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\cordobapatrimonio\cordobapatrimonio.html" target="_blank">Córdoba Patrimonio</a></li>
+          <li><a href="cordobapatrimonio/cordobapatrimonio.html" target="_blank">Córdoba Patrimonio</a></li>
           <li><a href="#">Recetas de la Abuela</a></li>
         </ul>
       </div>
