--- a/estructura.html
+++ b/estructura.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,100,200,300,500,600,800,900' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
-<link rel="icon" href="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\kiquebarbudovolteo.jpg" alt="Logo Kique Barbudo">
+<link rel="icon" href="images/kiquebarbudovolteo.jpg" alt="Logo Kique Barbudo">
 
 
 </head>
@@ -58,16 +58,16 @@
         <h3>Mis trabajos</h3>
         <div class="row">
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema1.html" target="_blank"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema1.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema1.html" target="_blank"> <img class="img-portfolio img-responsive" src="images/tema1.png"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema2.html"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema2.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema2.html"> <img class="img-portfolio img-responsive" src="images/tema2.png"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema3.html"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema3.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema3.html"> <img class="img-portfolio img-responsive" src="images/tema3.png"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema4.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="images/tema4.png"> </a> </div>
           </div>
         </div>
        
