--- a/tablas.html
+++ b/tablas.html
@@ -60,16 +60,16 @@
         <h3>Mis trabajos</h3>
         <div class="row">
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema1.html" target="_blank"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema1.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema1.html" target="_blank"> <img class="img-portfolio img-responsive" src="images/tema1.png"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema2.html"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema2.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema2.html"> <img class="img-portfolio img-responsive" src="images/tema2.png"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema3.html"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema3.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema3.html"> <img class="img-portfolio img-responsive" src="images/tema3.png"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\tema4.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="images/tema4.png"> </a> </div>
           </div>
         </div>
        
