--- a/listas.html
+++ b/listas.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,100,200,300,500,600,800,900' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
-<link rel="icon" href="C:\Users\ebarb\Documents\cfgs1DAW\lm\lmweb2020\images\kiquebarbudovolteo.jpg" alt="Logo Kique Barbudo">
+<link rel="icon" href="images/kiquebarbudovolteo.jpg" alt="Logo Kique Barbudo">
 
 
 </head>
