--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 </div>
-<div class="features">
+<!--<div class="features">
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6 col-xs-12">
@@ -78,7 +78,7 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
 
 <div id="work" class="portfolio">
