--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" type="text/css" href="css/simple-line-icons.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="alternate" type="application/rss+xml" title="Kique Barbudo-XML" href="https://github.com/kiquebarbudo87/kiquebarbudo87.github.io/blob/main/rss/archivo1.rss.xml" />
+<link rel="alternate" type="application/rss+xml" title="Kique Barbudo - HTML" href="https://github.com/kiquebarbudo87/kiquebarbudo87.github.io/blob/main/rss/archivo1.rss.xml" />
 <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,100,200,300,500,600,800,900' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
 <link rel="icon" href="images/kiquebarbudovolteo.jpg" alt="Logo Kique Barbudo">
@@ -27,6 +29,7 @@
           <li class="active"><a href="#work">Lenguaje de Marcas</a></li>
           <li><a href="cordobapatrimonio/cordobapatrimonio.html" target="_blank">Córdoba Patrimonio</a></li>
           <li><a href="#">Recetas de la Abuela</a></li>
+          <li><a href="rss/archivo1.rss.xml" type="application/rss"></a>RSS</li>
         </ul>
       </div>
     </div>
