--- a/tema4.html
+++ b/tema4.html
@@ -24,8 +24,15 @@
         <a class="navbar-brand" href="#">Tema 4</a> </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#" target="_blank">Ejercicio 1</a></li>
-          <li><a href="#" target="_blank">Ejercicio 2</a></li>
+          <li><a href="ejercicios/tema4/Bloque 1/Ej1-2-3.html" target="_blank">Bloque 1</a></li>
+          <li><a href="ejercicios/tema4/Bloque 2/Ej1-11.html" target="_blank">Bloque 2</a></li>
+          <li><a href="ejercicios/tema4/Bloque 3/Ej1-6.html" target="_blank">Bloque 3</a></li>
+          <li><a href="ejercicios/tema4/Bloque 4/Ej1-4.html" target="_blank">Bloque 4</a></li>
+          <li><a href="ejercicios/tema4/Bloque 5/Ej1-4.html" target="_blank">Bloque 5</a></li>
+          <li><a href="ejercicios/tema4/Bloque 6/Ej1-2.html" target="_blank">Bloque 6</a></li>
+          <li><a href="ejercicios/tema4/Bloque 7/Ej 1-2.html" target="_blank">Bloque 7</a></li>
+          <li><a href="ejercicios/tema4/Bloque 8/Ej 1-2.html" target="_blank">Bloque 8</a></li>
+          <li><a href="ejercicios/tema4/Bloque 9/Ej 1-2.html" target="_blank">Bloque 9</a></li>
         </ul>
       </div>
     </div>
@@ -40,7 +47,7 @@
             <!--<h2>Enrique <span>Barbudo</span> Ordóñez</h2>
             <p>Futuro Desarrollador. Técnico Superior en Alojamientos</p>-->
             <a href="index.html" class="banner-button">Inicio</a> </div>
-            <a href="#" class="banner-button">Tema Siguiente</a> </div>
+            <!--<a href="#" class="banner-button">Tema Siguiente</a> </div>-->
             <a href="tema3.html" class="banner-button">Tema Anterior</a> </div>
         </div>
       </div>
