--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand" href="https://es.wikipedia.org/wiki/Lenguaje_de_marcado" target="_blank">Lenguaje de Marcas</a> </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#work">Lenguaje de Marcas</a></li>
+          <li><a href="#work">Lenguaje de Marcas</a></li>
           <li><a href="cordobapatrimonio/cordobapatrimonio.html" target="_blank">Córdoba Patrimonio</a></li>
           <li><a href="https://8mgrancapitan.github.io/8-m.github.io/" target="_blank">8-M</a></li>
           <li><a href="rss/feed.rss.xml" type="application/rss+xml">RSS</a></li>
