--- a/index.html
+++ b/index.html
@@ -160,8 +160,9 @@
       <div class="col-md-4"> <span class="copyright">Copyright &copy; Kique Barbudo. Todos los derechos reservados</span> </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
-          <li><a href="https://twitter.com/kiqueland" target="_blank">Twitter<i class="fa fa-twitter"></i></a> </li>
+          <li><a href="https://twitter.com/kiqueland" target="_blank">Twitter<i class="icon-social-twitter"></i></a> </li>
           <li><a href="https://www.linkedin.com/in/enrique-barbudo-ord%C3%B3%C3%B1ez-58231ba2" target="_blank">Linkedin<i class="fa fa-linkedin"></i></a> </li>
+          <li><a href="https://github.com/kiquebarbudo87" target="_blank">Github</a></li>
         </ul>
       </div>
       <div class="col-md-4">
