--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <ul class="list-inline social-buttons">
           <li><a href="https://twitter.com/kiqueland" target="_blank">Twitter<i class="icon-social-twitter"></i></a> </li>
           <li><a href="https://www.linkedin.com/in/enrique-barbudo-ord%C3%B3%C3%B1ez-58231ba2" target="_blank">Linkedin<i class="fa fa-linkedin"></i></a> </li>
-          <li><a href="https://github.com/kiquebarbudo87" target="_blank">Github</a></li>
+          <li><a href="https://github.com/kiquebarbudo87" target="_blank"><img src="images/brand-github.svg"></a></li>
         </ul>
       </div>
       <div class="col-md-4">
