--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li><a href="#work">Lenguaje de Marcas</a></li>
           <li><a href="cordobapatrimonio/cordobapatrimonio.html" target="_blank">Córdoba Patrimonio</a></li>
           <li><a href="https://8mgrancapitan.github.io/8-m.github.io/" target="_blank">8-M</a></li>
+          <li><a href="ERP/index.html" target="_blank">ERP</a></li>
           <li><a href="rss/feed.rss.xml" type="application/rss+xml">RSS</a></li>
         </ul>
       </div>
