--- a/Oddo/index.html
+++ b/Oddo/index.html
@@ -111,7 +111,7 @@
             <div class="card blue-grey darken-3 col m8 offset-m2 s12">
                 <div class="card-image"><img src="img/captura10.jpg" alt="" class="materialboxed"></div>
                 <div class="card-content">
-                    <p>Image 9. Una vez aquí, podremos ya instalar aplicaciones de Odoo, como demostración instalaremos la
+                    <p>Una vez aquí, podremos ya instalar aplicaciones de Odoo que deseemos. Como demostración instalaremos la
                         app de <code>Inventario</code></p>
                 </div>
             </div>
