Añadiendo tema 5 y modificando index

--- a/index.html
+++ b/index.html
@@ -93,16 +93,19 @@
         <h3>Mis trabajos</h3>
         <div class="row">
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema1.html"> <img class="img-portfolio img-responsive" src="images/tema1.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema1.html"> <img class="img-portfolio img-responsive" src="images/intro.png" width="250px"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema2.html"> <img class="img-portfolio img-responsive" src="images/tema2.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema2.html"> <img class="img-portfolio img-responsive" src="images/html.png" width="250px" ></a></div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema3.html"> <img class="img-portfolio img-responsive" src="images/tema3.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema3.html"> <img class="img-portfolio img-responsive" src="images/intro2.png" width="250px"> </a> </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="images/tema4.png"> </a> </div>
+            <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="images/css.png" width="250px"> </a> </div>
+          </div>
+          <div class="col-lg-10 col-lg-offset-1 text-center text">
+            <div class="portfolio-item"> <a href="tema5.html"> <img class="img-portfolio img-responsive" src="images/all.png" width="450px"> </a> </div>
           </div>
         </div>
        
