--- a/tema3.html
+++ b/tema3.html
@@ -73,6 +73,9 @@
           <div class="col-md-6 col-sm-6">
             <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="images/tema4.png"> </a> </div>
           </div>
+          <div class="col-lg-10 col-lg-offset-1 text-center text">
+            <div class="portfolio-item"> <a href="tema5.html"> <img class="img-portfolio img-responsive" src="images/all.png" width="450px"> </a> </div>
+          </div>
         </div>
        
         
