--- a/tema4.html
+++ b/tema4.html
@@ -47,7 +47,7 @@
             <!--<h2>Enrique <span>Barbudo</span> Ordóñez</h2>
             <p>Futuro Desarrollador. Técnico Superior en Alojamientos</p>-->
             <a href="index.html" class="banner-button">Inicio</a> </div>
-            <!--<a href="#" class="banner-button">Tema Siguiente</a> </div>-->
+            <a href="tema5.html" class="banner-button">Tema Siguiente</a> </div>
             <a href="tema3.html" class="banner-button">Tema Anterior</a> </div>
         </div>
       </div>
@@ -74,6 +74,9 @@
           </div>
           <div class="col-md-6 col-sm-6">
             <div class="portfolio-item"> <a href="tema4.html"> <img class="img-portfolio img-responsive" src="images/tema4.png"> </a> </div>
+          </div>
+          <div class="col-lg-10 col-lg-offset-1 text-center text">
+            <div class="portfolio-item"> <a href="tema5.html"> <img class="img-portfolio img-responsive" src="images/all.png" width="450px"> </a> </div>
           </div>
         </div>
        
